[gd_scene load_steps=4 format=3 uid="uid://bkcjrat2s56xq"]

[ext_resource type="Script" uid="uid://jw0nyoxt0qj" path="res://UI/Menu, Settings Etc/settings.gd" id="1_x2hje"]

[sub_resource type="LabelSettings" id="LabelSettings_8sho6"]
font_size = 120

[sub_resource type="LabelSettings" id="LabelSettings_7bq4r"]
font_size = 20

[node name="Settings" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_x2hje")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -232.0
offset_top = -276.0
offset_right = 232.0
offset_bottom = 276.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
theme_override_constants/separation = 75

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"
label_settings = SubResource("LabelSettings_8sho6")

[node name="Music_Audio" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Music_Audio"]
layout_mode = 0
offset_top = 23.0
offset_right = 46.0
offset_bottom = 46.0
text = "Music"
label_settings = SubResource("LabelSettings_7bq4r")

[node name="Sound_Effects_Audio" type="HSlider" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/Sound_Effects_Audio"]
offset_top = 23.0
offset_right = 46.0
offset_bottom = 46.0
text = "Sound Effects"
label_settings = SubResource("LabelSettings_7bq4r")

[node name="CheckBox" type="CheckBox" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/CheckBox"]
offset_left = 30.0
offset_top = -3.0
offset_right = 174.0
offset_bottom = 28.0
text = "Mute"
label_settings = SubResource("LabelSettings_7bq4r")

[node name="Main_Menu" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="value_changed" from="MarginContainer/VBoxContainer/Music_Audio" to="." method="_on_music_audio_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/Sound_Effects_Audio" to="." method="_on_sound_effects_audio_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/CheckBox" to="." method="_on_check_box_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Main_Menu" to="." method="_on_main_menu_pressed"]
